# cmake-preset-generator

./: Cargo.toml  README.md
src/: main.rs  preset.rs  preset.rs.backup
src/preset/: workflow.rs
