[package]
name = "cmake-preset-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive", "cargo"] }
env_logger = "0.9.3"
log = { version = "0.4.17", features = ["std"] }
once_cell = "1.16.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
shadow = "0.0.1"
versions = "4.1.0"
