[package]
name = "cmake-preset-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
env_logger = "0.9.3"
log = { version = "0.4.17", features = ["std"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
